force-app/main/default/objects/Payment_Services_Configuration__c/Payment_Services_Configuration__c.object-meta.xml
<CustomObject>
    <label>Payment Services Configuration</label>
    <nameField>
        <label>Payment Services Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Services Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>