force-app/main/default/objects/Payment_Services_Configuration__c/fields/Is_Secret__c.field-meta.xml
<CustomField>
    <fullName>Is_Secret__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether the Key and Value are secret.</description>
    <label>Is Secret</label>
    <type>Checkbox</type>
</CustomField>