force-app/main/default/objects/Payment_Services_Configuration__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>The name of a piece of configuration data from Elevate. It&apos;s associated value is stored in the Value__c field.</description>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>