force-app/main/default/objects/Payment_Services_Configuration__c/fields/Service_Key__c.field-meta.xml
<CustomField>
    <fullName>Service_Key__c</fullName>
    <description>The combination of the Service and the Key value, delimited by &quot;::&quot;.</description>
    <externalId>true</externalId>
    <label>Service Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>