force-app/main/default/objects/Payment_Services_Configuration__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>The value of a piece of configuration data from Elevate. It&apos;s associated name is stored in the key__c field.</description>
    <label>Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>